new design update
New design

--- a/V2/index.html
+++ b/V2/index.html
@@ -34,18 +34,6 @@
       </li>
     </ul>
   </div>
-  <div class="nav navbar-nav navbar-right">
- <form class="navbar-form navbar-left d-none d-md-block" action="/action_page.php">
-      <div class="input-group">
-        <input type="text" class="form-control" placeholder="Search" name="search">
-        <div class="input-group-btn">
-          <button class="btn btn-default" type="submit">
-            <i class="glyphicon glyphicon-search"></i>
-          </button>
-        </div>
-      </div>
-    </form>
-</div>
  </div>
 </nav>
 </header>
@@ -60,16 +48,17 @@
 </div>
 
 <div class="container">
-  <h2 class="d-sm-block d-md-none text-center mt-5">About Us</h2>
-  <div class="about-us">
-   <div class="about-image">
-    <img src="./images/Group 1.png" alt="about us img" width="100%">
+  <h2 class="text-center mt-5">About Us</h2>
+  <div class="about-us mb-3">
+    <div class="about-text">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nibh gravida ullamcorper mattis sit mauris libero nulla duis. Ridiculus enim auctor auctor aenean ultrices donec ut feugiat in. Sed nulla adipiscing egestas urna, ut. Libero sollicitudin viverra in nunc, dignissim mus venenatis tincidunt. Odio id volutpat tortor placerat lorem vel.
+        <br> <br>
+        Eget nunc ac arcu id. A adipiscing tellus ornare tellus adipiscing luctus. Facilisis ut nibh ornare nunc. Amet at at a egestas lectus. Nec iaculis cursus mi amet. Tincidunt faucibus eu orci risus odio sed non purus. Aliquet quisque ipsum odio ut adipiscing purus. Sit condimentum vestibulum porttitor aliquet vivamus. Non lorem aenean felis, mauris sit bibendum sed aliquet condimentum. Mattis pharetra eu condimentum non in. Luctus egestas quis amet amet blandit. Ultricies dolor nulla tristique vulputate nunc ac facilisis. Congue et, non augue netus ullamcorper.
+      </p>
    </div>
-  <div class="about-text">
-   <h2 class="d-none d-md-block">About Us</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nibh gravida ullamcorper mattis sit mauris libero nulla duis. Ridiculus enim auctor auctor aenean ultrices donec ut feugiat in. Sed nulla adipiscing egestas urna, ut. Libero sollicitudin viverra in nunc, dignissim mus venenatis tincidunt. Odio id volutpat tortor placerat lorem vel.
-</p>
- <button type="button" class="btn btn-abt">Read More</button>
+   <div class="about-image">
+    <img src="./images/Rectangle 22.png" alt="about us img" width="100%">
   </div>
   </div>
 </div>
